ui_tests/tests/lowering/number-literals-out-of-range.stderr
error[E007]: number literal `-1337` does not fit type `Nat`
 --> ${DIRECTORY}/lowering/number-literals-out-of-range.lushui:8:15
  |
8 | unleet: Nat = -1337
  |               ^^^^^ 
  |
 note: values of this type must fit integer interval [0, infinity)

error[E007]: number literal `1000000000000000000000` does not fit type `Nat64`
  --> ${DIRECTORY}/lowering/number-literals-out-of-range.lushui:11:23
   |
11 |     accumulate @Nat64 1'000'000'000'000'000'000'000 @Int32 -9'999'999'999
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
   |
  note: values of this type must fit integer interval [0, 2^64-1]

error[E007]: number literal `-9999999999` does not fit type `Int32`
  --> ${DIRECTORY}/lowering/number-literals-out-of-range.lushui:11:60
   |
11 |     accumulate @Nat64 1'000'000'000'000'000'000'000 @Int32 -9'999'999'999
   |                                                            ^^^^^^^^^^^^^^ 
   |
  note: values of this type must fit integer interval [-2^31, 2^31-1]

error[E008]: attribute argument does not fit integer interval [0, 2^32-1]
  --> ${DIRECTORY}/lowering/number-literals-out-of-range.lushui:13:19
   |
13 | @(recursion-limit 130'454'112'009'021)
   |                   ^^^^^^^^^^^^^^^^^^^ 
   |

error: aborting due to 4 previous errors

